54) kernel: sched/__wake_up_sync_key(): Fix nr_exclusive tasks which lead to WF_SYNC clearing.<br>
55) kernel: sched: fix HRTICK.<br>
<br>
<br>
<b>2.6.x</b><br>
1) butcheck: add polling WPS press and call umount all script if pressed(if support storage configured).<br>
2) openssl: up to 0.9.8zf version.<br>
3) init.d: disable EEE by defaults (compat with old boots).<br>
4) xupnpd: switch to 5.1.x lua use (fix compat with last portable upnpd sdk with bug utf locale parse).<br>
5) xupnpd: use mpeg as default mime type (more devices compat whith this type).<br>
6) xupnpd: impliment base profile for Panasonic Viera(need manual default mime set to mpeg_ts now).<br>
7) goahead: add ldpc to station list.<br>
8) kernel: ralink_raeth: enable NAPI_GRO for all devices.<br>
9) kernel: ralink_wifi: unify exported struct.<br>
10) kernel: ralink_gpio: add config WPS button gpio number.<br>
11) kernel: ralink_arch: fix reset MT7621 PCIe peripherals.<br>
12) kernel: ralink_spi: fix SPI clock for MT7621 (bclk is 50MHz).<br>
13) kernel: netfilter: nf_nat: change sequence number adjustments to 32 bits.<br>
14) kernel: nf_conntrack_core: show conntrack limit value on table full.<br>
15) kernel: net: allow GRO only for local recived packets.<br>
16) kernel: net: add skb_dst_set_noref_force.<br>
17) kernel: net: tcp: fix tcp fin memory accounting.<br>
18) kernel: net: increase sk_[max_]ack_backlog.<br>
19) kernel: net: validate the range we feed to iov_iter_init() in sys_sendto/sys_recvfrom.<br>
20) kernel: net: separate the close_list and the unreg_list.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
3) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
4) need add dsvfs2 webui for managment online disk drives (as yandex disk and others).<br>
<br>
<br>
<br>